--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.0",
+    "recharts": "^2.15.2",
     "tailwind-merge": "^3.2.0",
     "tailwind-variants": "^1.0.0"
   },
