--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.7.0",
     "@remixicon/react": "^4.6.0",
     "clsx": "^2.1.1",
+    "html2pdf.js": "^0.10.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@tailwindcss/forms": "^0.5.10",
+    "@types/node": "^22.14.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
